test/expected/explain_lc.out
explain long char x
             ^
14: error: "long char" is illegal for built-in type
